prueba de subir solo una carpeta

--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -20,7 +20,7 @@
       </ol>
     </ul>
     <ul>
-        <li>Verdura</li>
+        <li>Verduras</li>
       <ol>
         <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">calabaza</li></a>
         <li> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">tomates</li></a>
