prueba de subir solo un fichero

--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -15,12 +15,12 @@
     <ul>
         <li>Carne</li>
       <ol>
-        <li> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">lomazo de cerdo</a></li>
+        <li> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">lomo de cerdo</a></li>
         <li> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">alitas de pollo</a></li>
       </ol>
     </ul>
     <ul>
-        <li>Verduras</li>
+        <li>Verdura</li>
       <ol>
         <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">calabaza</li></a>
         <li> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">tomates</li></a>
