--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -12,29 +12,48 @@
     <h1>Hola Mundo, día 1 en Adalab</h1>
     <main>
       <p>lista de la compra</p>
-    <ul>
-        <li>Carne</li>
-      <ol>
-        <li> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">lomo de cerdo</a></li>
-        <li> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">alitas de pollo</a></li>
-      </ol>
-    </ul>
-    <ul>
-        <li>Verdura</li>
-      <ol>
-        <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">calabaza</li></a>
-        <li> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">tomates</li></a>
-      </ol>
-    </ul>
-    <ul>
-      <li>Pescado</li>
-       <ol>
-        <li><a href="https://comerjapones.com/shimesaba-receta">caballa</li></a>
-        <li><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">sepia</li></a>         
-       </ol>
-    </ul>
-
-  
+      <ul>
+          <li>Carne</li>
+        <ol>
+          <li> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">lomo de cerdo</a></li>
+          <li> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">alitas de pollo</a></li>
+        </ol>
+      </ul>
+      <ul>
+          <li>Verdura</li>
+        <ol>
+          <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">calabaza</li></a>
+          <li> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">tomates</li></a>
+        </ol>
+      </ul>
+      <ul>
+          <li>Pescado</li>
+        <ol>
+          <li><a href="https://comerjapones.com/shimesaba-receta">caballa</li></a>
+          <li><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">sepia</li></a>         
+        </ol>
+      </ul>
+      <section>
+        <figure>
+          <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado">
+          <figcaption>lineal de verduras en un supermercado</figcaption>
+        </figure>
+      </section>
+      <h2>formularios</h2>
+        <form>
+          <label for="Nombre">
+            <span>¿Quién eres?</span>
+            <input type="text" id="nombre" placeholder="Tu nombre">
+          </label>
+          <label for="fecha-nacimiento">
+            <span>Introduce tu fecha de nacimiento</span>
+            <input type="date" id="fecha-nacimiento">
+          </label>
+          <label for="horario">
+            <span>Horario preferido para comer</span>
+            <input type="time" id="horario">
+          </label>
+        </form>
     </main>
     <footer>piesito</footer>
   </body>
