--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -54,6 +54,34 @@
             <input type="time" id="horario">
           </label>
         </form>
+        <!-- <form action="">
+          <label for="hora">
+            <span>Hora</span>
+            <input type="time" id="hora" name="hora">
+          </label>
+          <label for="dia">
+            <span>Día</span>
+            <input type="date" id="dia" name="dia">
+          </label>
+          <label for="semana">
+            <span>Semana</span>
+            <input type="week" id="semana" name="semana">
+          </label>
+          <label for="mes">
+            <span>Mes</span>
+            <input type="month" id="mes" name="mes">
+          </label>
+          <input type="submit">
+        </form> forma larga de hacer un calendario. salen varias capsulas para cada cosa
+      Para convertir texto en comentario y que el navcegador no lo lea
+    CRTL k y luego CRTL C--> 
+    <form>
+      <label for="calendario">
+        <span>¿Cuándo quedamos a comer?</span>
+        <input type="datetime-local" id="calendario" name="calendario">
+        <input type="submit">
+      </label>
+    </form>
     </main>
     <footer>piesito</footer>
   </body>
