primera prueba CSS

--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -4,33 +4,33 @@
     <meta charset="utf-8" />
     <meta name="description" content="página de prueba de HTML">
     <meta name="viewport" content="width=device-width, initial-scale=1-0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Mi página</title>
   </head>
   <body>
     <header>para ir probando cositas</header>
     <h1>Hola Mundo, día 1 en Adalab</h1>
     <main>
-      <p>lista de la compra</p>
+      <h2>Lista de la compra</h2>
       <ul>
-          <li>Carne</li>
+          <li class="encabezadolista">Carne</li>
         <ol>
-          <li> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">lomo de cerdo</a></li>
-          <li> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">alitas de pollo</a></li>
+          <li id="link"> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">Lomo de cerdo</a></li>
+          <li id="link"> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">Alitas de pollo</a></li>
         </ol>
       </ul>
       <ul>
-          <li>Verdura</li>
+          <li class="encabezadolista">Verdura</li>
         <ol>
-          <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">calabaza</li></a>
-          <li> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">tomates</li></a>
+          <li id="link"><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">Calabaza</li></a>
+          <li id="link"> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">Tomates</li></a>
         </ol>
       </ul>
       <ul>
-          <li>Pescado</li>
+          <li class="encabezadolista">Pescado</li>
         <ol>
-          <li><a href="https://comerjapones.com/shimesaba-receta">caballa</li></a>
-          <li><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">sepia</li></a>         
+          <li id="link"><a href="https://comerjapones.com/shimesaba-receta">Caballa</li></a>
+          <li id="link"><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">Sepia</li></a>         
         </ol>
       </ul>
       <section>
@@ -39,7 +39,7 @@
           <figcaption>lineal de verduras en un supermercado</figcaption>
         </figure>
       </section>
-      <h2>formularios</h2>
+      <h2>Formularios</h2>
         <form>
           <label for="Nombre">
             <span>¿Quién eres?</span>
