--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -35,7 +35,7 @@
       </ul>
       <section>
         <figure>
-          <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado">
+          <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado" style="width:300px;">
           <figcaption>lineal de verduras en un supermercado</figcaption>
         </figure>
       </section>
