--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -8,26 +8,34 @@
     <title>Mi página</title>
   </head>
   <body>
-    <header>para ir probando cositas</header>
+    <header>
+      <nav>
+        <ul class="main-nav">
+          <li class="main-nav__item"><a href="">Home</a></li>
+          <li class="main-nav__item"><a href="">Recetas</a></li>
+          <li class="main-nav__item"><a href="">Formularios</a></li>
+        </ul>
+      </nav>
+    </header>
     <h1>Hola Mundo, día 1 en Adalab</h1>
     <main>
       <h2>Lista de la compra</h2>
       <ul>
-          <li class="encabezadolista">Carne</li>
+          <li class="lista">Carne</li>
         <ol>
-          <li id="link"> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">Lomo de cerdo</a></li>
-          <li id="link"> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">Alitas de pollo</a></li>
+          <li class="sublista"> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">Lomo de cerdo</a></li>
+          <li class="sublista"> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">Alitas de pollo</a></li>
         </ol>
       </ul>
       <ul>
-          <li class="encabezadolista">Verdura</li>
+          <li class="lista">Verdura</li>
         <ol>
           <li id="link"><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">Calabaza</li></a>
           <li id="link"> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">Tomates</li></a>
         </ol>
       </ul>
       <ul>
-          <li class="encabezadolista">Pescado</li>
+          <li class="lista">Pescado</li>
         <ol>
           <li id="link"><a href="https://comerjapones.com/shimesaba-receta">Caballa</li></a>
           <li id="link"><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">Sepia</li></a>         
