prueba css con una caja

--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -44,7 +44,7 @@
       <section>
         <figure>
           <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado" style="width:300px;">
-          <figcaption>lineal de verduras en un supermercado</figcaption>
+          <figcaption style="margin-left: 20px;">lineal de verduras en un supermercado</figcaption>
         </figure>
       </section>
       <h2>Formularios</h2>
