--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -8,43 +8,44 @@
     <title>Mi página</title>
   </head>
   <body>
-    <header>
+    <header class="page-header">
+      <h1>Vamos a comer</h1>
       <nav>
         <ul class="main-nav">
           <li class="main-nav__item"><a href="">Home</a></li>
           <li class="main-nav__item"><a href="">Recetas</a></li>
-          <li class="main-nav__item"><a href="">Formularios</a></li>
+          <li id="botonformulario" class="main-nav__item"><a href="">Formularios</a></li>
         </ul>
       </nav>
     </header>
-    <h1>Hola Mundo, día 1 en Adalab</h1>
+    
     <main>
       <h2>Lista de la compra</h2>
       <ul>
           <li class="lista">Carne</li>
         <ol>
-          <li class="sublista"> <a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">Lomo de cerdo</a></li>
-          <li class="sublista"> <a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">Alitas de pollo</a></li>
+          <li><a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">Lomo de cerdo</a></li>
+          <li><a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">Alitas de pollo</a></li>
         </ol>
       </ul>
       <ul>
           <li class="lista">Verdura</li>
         <ol>
-          <li id="link"><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">Calabaza</li></a>
-          <li id="link"> <a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">Tomates</li></a>
+          <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">Calabaza</li></a>
+          <li><a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">Tomates</li></a>
         </ol>
       </ul>
       <ul>
           <li class="lista">Pescado</li>
         <ol>
-          <li id="link"><a href="https://comerjapones.com/shimesaba-receta">Caballa</li></a>
-          <li id="link"><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">Sepia</li></a>         
+          <li><a href="https://comerjapones.com/shimesaba-receta">Caballa</li></a>
+          <li><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">Sepia</li></a>         
         </ol>
       </ul>
       <section>
         <figure>
           <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado" style="width:300px;">
-          <figcaption style="margin-left: 20px;">lineal de verduras en un supermercado</figcaption>
+          <figcaption style="margin-left: 20px;" color="darkolivegreen;">lineal de verduras en un supermercado</figcaption>
         </figure>
       </section>
       <h2>Formularios</h2>
