--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -12,9 +12,9 @@
       <h1>Vamos a comer</h1>
       <nav>
         <ul class="main-nav">
-          <li class="main-nav__item"><a href="">Home</a></li>
-          <li class="main-nav__item"><a href="">Recetas</a></li>
-          <li id="botonformulario" class="main-nav__item"><a href="">Formularios</a></li>
+          <li class="main-nav-item"><a href="">Home</a></li>
+          <li class="main-nav-item"><a href="">Recetas</a></li>
+          <li class="main-nav-item alt-main-nav-item" ><a href="">Formularios</a></li>
         </ul>
       </nav>
     </header>
@@ -45,7 +45,7 @@
       <section>
         <figure>
           <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado" style="width:300px;">
-          <figcaption style="margin-left: 20px;" color="darkolivegreen;">lineal de verduras en un supermercado</figcaption>
+          <figcaption style="margin-left: 20px;">lineal de verduras en un supermercado</figcaption>
         </figure>
       </section>
       <h2>Formularios</h2>
