--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -43,7 +43,7 @@
         </ol>
       </ul>
       <section>
-        <figure>
+        <figure class="foto-verduras">
           <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado" style="width:300px;">
           <figcaption style="margin-left: 20px;">lineal de verduras en un supermercado</figcaption>
         </figure>
