--- a/modulo-1/modulo-1-leccion-1-ejercicio-pagina-simple/index.html
+++ b/modulo-1/modulo-1-leccion-1-ejercicio-pagina-simple/index.html
@@ -37,6 +37,6 @@
             </p>
         </section>
     </main>
-    <footer>Gracias por leernos! © 2020</footer>
+    <footer><small>Gracias por leernos! © 2020</small></footer>
 </body>
 </html>
