--- a/modulo-1/modulo-1-leccion-1-ejercicio-tabla/index.html
+++ b/modulo-1/modulo-1-leccion-1-ejercicio-tabla/index.html
@@ -9,6 +9,7 @@
 <body>
     <main>
         <table>
+          <caption>organización semanal de la comida</caption>
             <tr>
               <th>Lunes</th>
               <th>Martes</th>
