--- a/modulo-0/index.html
+++ b/modulo-0/index.html
@@ -21,31 +21,33 @@
     
     <main>
       <h2>Lista de la compra</h2>
-      <ul>
-          <li class="lista">Carne</li>
-        <ol>
-          <li><a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">Lomo de cerdo</a></li>
-          <li><a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">Alitas de pollo</a></li>
-        </ol>
-      </ul>
-      <ul>
-          <li class="lista">Verdura</li>
-        <ol>
-          <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">Calabaza</li></a>
-          <li><a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">Tomates</li></a>
-        </ol>
-      </ul>
-      <ul>
-          <li class="lista">Pescado</li>
-        <ol>
-          <li><a href="https://comerjapones.com/shimesaba-receta">Caballa</li></a>
-          <li><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">Sepia</li></a>         
-        </ol>
-      </ul>
-      <section>
+      <section class="compra" >
+        <ul>
+            <li class="lista">Carne</li>
+                <ol>
+                  <li><a href="https://www.bonviveur.es/recetas/lomo-de-cerdo-adobado">Lomo de cerdo</a></li>
+                  <li><a href="https://www.recetasderechupete.com/alitas-de-pollo-al-horno-con-salsa-de-soja-miel-y-limon/9995/">Alitas de pollo</a></li>
+                </ol>
+              </ul>
+              <ul>
+                  <li class="lista">Verdura</li>
+               <ol>
+                  <li><a href="https://www.hogarmania.com/cocina/recetas/postres/tarta-calabaza-9752.html">Calabaza</li></a>
+                  <li><a href="https://www.cocinatis.com/receta/tomates-verdes-fritos-una-receta-con-nombre-de-pelicula">Tomates</li></a>
+                      </ol>
+             </ul>
+              <ul>
+                 <li class="lista">Pescado</li>
+               <ol>
+                <li><a href="https://comerjapones.com/shimesaba-receta">Caballa</li></a>
+                 <li><a href="https://www.recetasderechupete.com/como-hacer-sepia-al-ajillo/20941/">Sepia</li></a>         
+               </ol>
+          </ul>
+      </section>
+      <section class="compra foto-compra">
         <figure class="foto-verduras">
-          <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado" style="width:300px;">
-          <figcaption style="margin-left: 20px;">lineal de verduras en un supermercado</figcaption>
+          <img src="./tinified/chiquita.jpg" alt="verduras en un supermercado" style="width:200px;">
+          <figcaption style="margin-left: -8px;">lineal de verduras en un supermercado</figcaption>
         </figure>
       </section>
       <h2>Formularios</h2>
