--- a/modulo-0/prueba.html
+++ b/modulo-0/prueba.html
@@ -8,9 +8,29 @@
     <title>Document</title>
   </head>
   <body>
+    <header class="header">
+      <nav>
+        <ul>
+          <li><a href="#" class="link">blog</a></li>
+          <li><a href="#" class="link">bootcamps</a></li>
+          <li><a href="#" class="link">empresas</a>
+          </li>
+          <li><a href="#" class="link">reserva tu plaza</a>
+          </a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <h1 class="title">hazte <span>adalaber</span></h1>
+      </section>
+    </main>
     <div class="contenedor">
         <div class="primer-bloque">ejemplo </div>
-             <div class="">El empanado añade una corteza exterior crujiente que evita la pérdida de los jugos pero también absorbe la grasa usada al freír. Lo que distingue al pollo frito de otras frituras de pollo es que habitualmente se corta por las articulaciones, dejando los huesos y la piel intactos. La piel crujiente bien condimentada, sin exceso de grasa, es el rasgo distintivo de un pollo bien frito. </div>
+             <div class="">                
+                  <p>EL empanado añade una corteza exterior crujiente que evita la pérdida de los jugos pero también absorbe la grasa usada al freír. Lo que distingue al pollo frito de otras frituras de pollo es que habitualmente se corta por las articulaciones, dejando los huesos y la piel intactos. La piel crujiente bien condimentada, sin exceso de grasa, es el rasgo distintivo de un pollo bien frito.</p>
+                 </div>
     </div>
+    
   </body>
   </html>
