terminado ejercicio import de Sass

--- a/modulo-1/modulo-1-leccion-3-ejercicio7-otrapaginaflexbox/index.html
+++ b/modulo-1/modulo-1-leccion-3-ejercicio7-otrapaginaflexbox/index.html
@@ -5,27 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <script src="https://kit.fontawesome.com/eeb1df6846.js" crossorigin="anonymous"></script>
     <title>Ejercicio 7 flexbox</title>
 </head>
 <body>
-    <main>
-        <aside class="bloque-gris">
+    <main class="contenedor">
+        <div class="bloque-gris">
 
-        </aside>
+        </div>
         <section class="bloque-principal">
-            <h3>Centro de fisioterapia Guzman Fernandez</h3>
-            <h3 class="subtítulo">Fisioterapia General</h3>
-            <div>
+            <p>
+            <span class="titulo">Centro de fisioterapia Guzman Fernandez</span>
+            <span class="subtítulo">Fisioterapia General</span>
+            </p>
+            <div class="botones">
                 <button>Reservar cita</button>
                 <button>Pedir presupuesto</button>                
             </div>
 
+
         </section>
         <aside class="bloque-puntuacion">
-            <h4>24 valoraciones</h4>
-            <h4 class="subtitulo-valoraciones"><a href="#"> ver comentarios</a></h4>
-            <div>8.9</div>
-            <div>insertar estrella</div>
+            <div class="valoraciones">
+                <p> valoraciones </p>
+                <p> <a href="#"> ver comentarios</a></p>
+            </div>
+           
+            <div class="estrella">
+                <div>8.9</div>
+                <div><i class="fa-solid fa-star"></i></div>
+            </div>
 
 
         </aside>
