--- a/modulo-2/modulo-02-leccion-01-ejercicio-01-mensaje-navegador-obsoleto/index.html
+++ b/modulo-2/modulo-02-leccion-01-ejercicio-01-mensaje-navegador-obsoleto/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Web sencilla</title>
 </head>
 
@@ -54,11 +54,10 @@
 
         <section class="modal">
             <div class="modal-container">
-                <h3 class="modal-title">¡Hola!</h3>
-                <p class="modal-text">Suscríbete a nuestra newsletter para estar al día de nuestras noticias</p>
+                <h2 class="modal-title"></h2>
                 <div class="buttons">
-                    <button class="modal-nop">Rechazar</button>
-                    <button class="modal-ok">Suscribirme</button>
+                    <button class="modal-nop">No gracias</button>
+                    <button class="modal-ok">Vale ok</button>
                 </div>
             </div>
         </section>
@@ -73,6 +72,7 @@
                 </ul>
             </nav>
         </footer>
+        <script type="text/javascript" src="./main.js"></script>
 </body>
 
 </html>
