do some excercises

--- a/modulo-2/modulo-02-leccion-05-ejercicio-04-pares/index.html
+++ b/modulo-2/modulo-02-leccion-05-ejercicio-04-pares/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <header class="header"></header>
+    <main class="main"></main>
+    <p class="paragraph">10</p>
     <script src="./main.js"></script>
 </body>
 
