--- a/modulo-2/modulo-02-leccion-04-ejercicio-04-que-vemos/index.html
+++ b/modulo-2/modulo-02-leccion-04-ejercicio-04-que-vemos/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <main>
+        <button class="start">empezar</button>
+        <p class="list-films"></p>
+        <p class="text"></p>
+    </main>
+
     <script src="./main.js"></script>
 </body>
 
