--- a/modulo-2/modulo-02-leccion-11.1-ejercicio-04-lista-de-tareas/plantilla-de-ejercicios/index.html
+++ b/modulo-2/modulo-02-leccion-11.1-ejercicio-04-lista-de-tareas/plantilla-de-ejercicios/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+  <main>
+    <p class="js-counter"></p>
+    <form action="" class="js-form">
+      <ul class="js-list">
+
+      </ul>
+    </form>
+  </main>
 
 
 
