--- a/modulo-2/modulo-02-leccion-13.2-ejercicio-02-api-github/index.html
+++ b/modulo-2/modulo-02-leccion-13.2-ejercicio-02-api-github/index.html
@@ -22,16 +22,16 @@
     </article>
 
     <button class="js-btn2">Breeds</button>
-    <img class="dog1" alt="Dog" />
-    <img class="dog2" alt="Dog" />
-    <img class="dog3" alt="Dog" />
-    <img class="dog4" alt="Dog" />
-    <img class="dog5" alt="Dog" />
-    <img class="dog6" alt="Dog" />
-    <img class="dog7" alt="Dog" />
-    <img class="dog8" alt="Dog" />
-    <img class="dog9" alt="Dog" />
-    <img class="dog10" alt="Dog" />
+    <img class="dog1" alt="" />
+    <img class="dog2" alt="" />
+    <img class="dog3" alt="" />
+    <img class="dog4" alt="" />
+    <img class="dog5" alt="" />
+    <img class="dog6" alt="" />
+    <img class="dog7" alt="" />
+    <img class="dog8" alt="" />
+    <img class="dog9" alt="" />
+    <img class="dog10" alt="" />
 
 
   </main>
